# cuda-mpi-kokkos-ex

./: CMakeLists.txt  README.md  example.cpp  job_1gpu.sh  job_4gpu.sh  main.cpp  no_kokkos.cu
